--- a/style.css
+++ b/style.css
@@ -103,6 +103,11 @@ body {
     font-size: 30px;
 }
 
+
+/**********************************************
+*** Buttons
+**********************************************/
+
 button {
     position: absolute;
     width: 200px;
